WebCore: REGRESSION(4.0.4-42a12): Indent does not work for twice modified with background text in gmail. <rdar://problem/7442387> https://bugs.webkit.org/show_bug.cgi?id=32233

Reviewed by Darin Adler.

Fixes problem in re-creating the correct hierarchy under the new block.
Added extensive testing to cover all the cases.

Test: editing/execCommand/indent-with-style2.html

* editing/CompositeEditCommand.cpp:
(WebCore::CompositeEditCommand::cloneParagraphUnderNewElement):

LayoutTests: REGRESSION(4.0.4-42a12): Indent does not work for twice modified with background text in gmail.
<rdar://problem/7442387>
https://bugs.webkit.org/show_bug.cgi?id=32233

Reviewed by Darin Adler.

* editing/execCommand/indent-with-style2-expected.txt: Added.
* editing/execCommand/indent-with-style2.html: Added.



Canonical link: https://commits.webkit.org/43244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51819 268f45cc-cd09-0410-ab3c-d52691b4dbfc